// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test_declarations.ts - {"arrowParens":"avoid"} format 1`] = `
====================================options=====================================
arrowParens: "avoid"
parsers: ["typescript", "babel", "flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
test("does something really long and complicated so I have to write a very long name for the test", <T>(done) => {
  console.log("hello!");
});

=====================================output=====================================
test("does something really long and complicated so I have to write a very long name for the test", <T>(done) => {
  console.log("hello!");
});

================================================================================
`;

exports[`test_declarations.ts format 1`] = `
====================================options=====================================
parsers: ["typescript", "babel", "flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
test("does something really long and complicated so I have to write a very long name for the test", <T>(done) => {
  console.log("hello!");
});

=====================================output=====================================
test("does something really long and complicated so I have to write a very long name for the test", <T>(done) => {
  console.log("hello!");
});

================================================================================
`;
